css/theme.scss
/* ... */
.button-primary {
  display: inline-block;
  padding: $gap * 0.5 $gap;
  background: var(--color-link);
  color: white;
  text-decoration: none;
  border-radius: var(--border-radius);
  transition:
    transform 0.2s ease,
    background 0.2s ease;

  &:hover {
    background: var(--form-button-hover-bg-color);
    color: white;
    text-decoration: none;
    transform: scale(1.05);
  }
}

form {
  --border: 1px solid #ccc;
}

.read-more {
  @extend .button-primary;
  display: block;
  text-align: center;
  margin: $gap * 2 auto;
  max-width: max-content;
}

.reviews-grid {
  li {
    .review {
      font-family: var(--font-family-body);
      font-style: normal;

      p {
        &:first-child::before {
          content: "\201C";
          font-size: 2rem;
          line-height: 0;
          vertical-align: baseline;
          margin-right: 0.25rem;
          color: var(--color-link);
          display: inline;
        }

        &:last-child::after {
          content: "\201D";
          font-size: 2rem;
          line-height: 0;
          vertical-align: -0.4em;
          margin-left: 0.25rem;
          color: var(--color-link);
          display: inline;
        }
      }
    }

    .name {
      font-weight: bold;
      font-size: 0.9rem;
      gap: 0.5rem;

      .reviewer-avatar {
        width: 40px;
        height: 40px;
        margin: 0;
        border-radius: 3px;
        overflow: hidden;
      }

      @media (max-width: $mobile) {
        text-align: center;
      }
    }

    .rating {
      font-size: 1.5rem;
      color: #f5c211;
      line-height: 1;
    }

    .date {
      font-size: 0.85rem;
      color: #999;
      font-style: italic;
    }

    .products {
      font-style: italic;
      font-size: 0.9rem;
      margin-bottom: 2rem;

      a {
        color: #ccc;
        &:hover {
          color: var(--color-link);
        }
      }
    }
  }
}

body > footer {
  p {
    margin: 1.5rem auto;
  }
  .socials li a {
    img,
    &:hover img {
      filter: invert(15%) sepia(100%) saturate(5294%) hue-rotate(352deg)
        brightness(99%) contrast(88%) !important;
    }
  }
}

body.home section {
  margin-bottom: 4rem;
}

.brands {
  margin: $gap * 4 0;
  overflow: hidden;
  max-width: 100vw;

  .brands-scroll-container {
    max-width: 100%;
    overflow: hidden;
    position: relative;

    &::before,
    &::after {
      content: "";
      display: block;
      width: 5px;
      position: absolute;
      top: 0;
      bottom: 0;
      z-index: 1;
    }
    &::before {
      left: 0;
      background: linear-gradient(
        90deg,
        rgba(255, 255, 255, 1) 0%,
        rgba(255, 255, 255, 0) 100%
      );
    }
    &::after {
      right: 0;
      background: linear-gradient(
        90deg,
        rgba(255, 255, 255, 0) 0%,
        rgba(255, 255, 255, 1) 100%
      );
    }
  }

  .brands-scroll {
    display: flex;
    animation: scroll-brands 40s linear infinite;

    &:hover {
      animation-play-state: paused;
    }

    & > div,
    & > ul {
      display: flex;
      flex-shrink: 0;
    }
  }

  ul {
    display: flex;
    gap: 96px;
    list-style: none;
    margin: 0;
    padding: 0;
    flex-shrink: 0;

    li {
      flex-shrink: 0;
      display: flex;
      align-items: center;

      .image-wrapper {
        height: 50px;
        width: auto;
        border-radius: 0;
        object-fit: contain;
        transition: all 0.3s ease;
        align-content: center;
      }
    }
  }
}

@keyframes scroll-brands {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-50%);
  }
}

.items a.image-link {
  aspect-ratio: 11/10;
  overflow: hidden;
  position: relative;

  .image-wrapper,
  .image-wrapper img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

body.page .content img,
body.page .content .image-wrapper {
  max-width: 695px !important;
}

.latest-news {
  text-align: center;

  .items {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: $gap;
    list-style: none;
    margin: $gap * 2 0;
    padding: 0;

    li {
      flex: 0 0 calc(25% - #{$gap * 0.75});
      max-width: calc(25% - #{$gap * 0.75});

      @media (max-width: 999px) {
        flex: 0 0 calc(50% - #{math.div($gap, 2)});
        max-width: calc(50% - #{math.div($gap, 2)});
      }

      @media (max-width: $mobile) {
        flex: 0 0 100%;
        max-width: 100%;
      }
    }
  }
}

/* Hide Service Areas submenu on mobile
@media (max-width: $mobile) {
  body.sticky-mobile-nav nav > ul > li:has(> ul) > a::after {
    display: none !important; // carets
  }
  nav li:has(> a[href="/service-areas/"]) > ul {
    display: none !important;
  }
}
 */
body.news-post article.content img,
body.news-post article.content .image-wrapper {
  margin: 2rem auto;
}

@include breakpoints.up("lg") {
  body.one-column {
    #item {
      grid-template-columns: 450px 1fr;
    }
  }
}

